# GfxHealthCheck

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  gfxhealthcheck.py
debug/: CMakeLists.txt  main.cpp
docs/: driver_switch.md
lib/: CMakeLists.txt
lib/glad/: glad.c  glad.h
lib/src/: glxcontext.cpp  glxcontext.h
tool/: __main__.py  analyser.py  config.py  lib.py  logger.py  logging.py  report.py  system_info.py  utils.py
